# BudgetApp

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .trivyignore  CLAUDE.md  Makefile  README.md  SPEC.md  docker-compose.yml
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
backend/: .dockerignore  Dockerfile  README.md  manage.py  pyproject.toml
backend/apps/accounts/: admin.py  api_urls.py  apps.py  auth_urls.py  models.py  serializers.py  views.py
backend/apps/accounts/management/commands/: setup_household.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_totp_device_secret.py
backend/apps/accounts/tests/: test_auth_api.py  test_models.py  test_setup_household.py
backend/apps/bills/: admin.py  api_urls.py  apps.py  models.py  serializers.py  views.py
backend/apps/bills/migrations/: 0001_initial.py
backend/apps/bills/tests/: test_models.py
backend/apps/budgets/: admin.py  api_urls.py  apps.py  models.py  serializers.py  views.py
backend/apps/budgets/migrations/: 0001_initial.py
backend/apps/budgets/tests/: test_models.py
backend/apps/core/: admin.py  api_urls.py  apps.py  crypto.py  models.py  permissions.py  serializers.py  views.py
backend/apps/core/management/commands/: backup.py  restore.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/core/tests/: test_crypto.py  test_migrations.py  test_models.py
backend/apps/finances/: admin.py  api_urls.py  apps.py  import_views.py  models.py  serializers.py  signals.py  views.py
backend/apps/finances/importers/: dedup.py  parser.py  profiles.py  rules.py
backend/apps/finances/migrations/: 0001_initial.py  0002_seed_import_profiles.py  0003_add_xls_import_format.py  0004_add_import_hash_unique_constraint.py
backend/apps/finances/tests/: test_finances_api.py  test_import_api.py  test_import_parser.py  test_models.py
backend/apps/maintenance/: admin.py  api_urls.py  apps.py  models.py  serializers.py  views.py
backend/apps/maintenance/migrations/: 0001_initial.py
backend/apps/maintenance/tests/: test_models.py
backend/apps/notifications/: admin.py  api_urls.py  apps.py  models.py  serializers.py  views.py
backend/apps/notifications/migrations/: 0001_initial.py
backend/apps/notifications/tests/: test_models.py
backend/apps/projects/: admin.py  api_urls.py  apps.py  models.py  serializers.py  views.py
backend/apps/projects/migrations/: 0001_initial.py
backend/apps/projects/tests/: test_models.py
backend/budgetapp/: __init__.py  api_urls.py  asgi.py  celery.py  settings.py  test_settings.py  urls.py  wsgi.py
docs/superpowers/specs/: 2026-04-24-csv-import-design.md
frontend/: .dockerignore  .eslintrc.cjs  .prettierignore  Dockerfile  README.md  UI-SPEC.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/src/: app.css  app.d.ts  app.html
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/stores/: session.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/import/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/totp-setup/: +page.svelte
