[project]
name = "budgetapp-backend"
version = "0.0.0"
description = "BudgetApp backend: Django 5 + DRF for a self-hostable household finance app."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "BudgetApp" }]

# Runtime dependencies.
# Keep this list in sync with SPEC.md §7 (security-critical choices) and §9 (stack).
dependencies = [
    "Django~=5.1",
    "djangorestframework>=3.15,<4.0",
    "drf-spectacular>=0.27,<1.0",
    "django-otp[qrcode]>=1.5,<2.0",
    "django-cors-headers>=4.4,<5.0",
    "argon2-cffi>=23.1",
    "psycopg[binary]~=3.2",
    "celery~=5.4",
    "redis>=5.0,<6.0",
    "django-environ>=0.11,<1.0",
    "dj-database-url>=2.2,<3.0",
    "cryptography>=43.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.8,<5.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
    "django-stubs[compatible-mypy]>=5.0",
    "djangorestframework-stubs[compatible-mypy]>=3.15",
    "pip-audit>=2.7,<3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["budgetapp", "apps"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "**/migrations/**",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "S",    # flake8-bandit
    "N",    # pep8-naming
    "C4",   # comprehensions
    "DJ",   # flake8-django
    "PL",   # pylint
    "RUF",
]
ignore = [
    "S101",    # asserts ok in tests
    "PLR0913",
    # Django idioms that clash with these rules:
    "RUF012",  # Django Meta.constraints / permissions are canonically lists
    "PLC0415", # Django's manage.py puts import inside try/except by design
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S", "PLR2004"]
"**/settings.py" = ["S105", "S106"]
"manage.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]
exclude = [
    "^.*/migrations/.*$",
    "^build/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.django-stubs]
django_settings_module = "budgetapp.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "budgetapp.test_settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["apps"]
addopts = [
    "--strict-markers",
    "--tb=short",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["apps", "budgetapp"]
omit = [
    "**/migrations/**",
    "**/tests/**",
    "**/asgi.py",
    "**/wsgi.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
